[gd_scene load_steps=23 format=3 uid="uid://ciwri638cvymt"]

[ext_resource type="Texture2D" uid="uid://bh0hjvmlq1uko" path="res://Sprites/player.png" id="1_4ko65"]
[ext_resource type="Script" path="res://Codes/player.gd" id="1_gnt2t"]
[ext_resource type="Texture2D" uid="uid://chawy48p83qdw" path="res://Sprites/eyes.png" id="3_0q56b"]
[ext_resource type="Texture2D" uid="uid://dm4itdjafarl8" path="res://Sprites/sword2.png" id="3_tq1ac"]
[ext_resource type="AudioStream" uid="uid://tdijlb7ev82d" path="res://Audio/player_hurt.mp3" id="5_6edy6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fubps"]
atlas = ExtResource("1_4ko65")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g51b7"]
atlas = ExtResource("1_4ko65")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxwvp"]
atlas = ExtResource("1_4ko65")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfh7f"]
atlas = ExtResource("1_4ko65")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx5fe"]
atlas = ExtResource("1_4ko65")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_blr6d"]
atlas = ExtResource("1_4ko65")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rq84"]
atlas = ExtResource("1_4ko65")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yffra"]
atlas = ExtResource("1_4ko65")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvn4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fubps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g51b7")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxwvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfh7f")
}],
"loop": true,
"name": &"run",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx5fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blr6d")
}],
"loop": true,
"name": &"sneak",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rq84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yffra")
}],
"loop": true,
"name": &"sneak_idle",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8u7nq"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykfuj"]
size = Vector2(15, 27)

[sub_resource type="Animation" id="Animation_p6lru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_21jo1"]
resource_name = "blink"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 3.26667, 5, 5.13333, 5.3, 5.43333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpk03"]
_data = {
"RESET": SubResource("Animation_p6lru"),
"blink": SubResource("Animation_21jo1")
}

[sub_resource type="Animation" id="Animation_gcc22"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}

[sub_resource type="Animation" id="Animation_lbd75"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, -14), Vector2(0, -18), Vector2(0, -14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w42ct"]
_data = {
"RESET": SubResource("Animation_gcc22"),
"attack": SubResource("Animation_lbd75")
}

[node name="player" type="CharacterBody2D"]
z_index = 10
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_gnt2t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vvn4j")
animation = &"idle"
autoplay = "idle"

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8u7nq")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="sword" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -14)
texture = ExtResource("3_tq1ac")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -12.5)
shape = SubResource("RectangleShape2D_ykfuj")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("3_0q56b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_gpk03")
}
autoplay = "blink"

[node name="sword_attack" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w42ct")
}

[node name="player_hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6edy6")
pitch_scale = 0.77

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
